--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^17.0.2",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "sass": "^1.62.0",
     "web-vitals": "^1.0.1"
   },
