--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "sass": "^1.62.0",
     "web-vitals": "^1.0.1"
   },
